poll voting component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,8 @@
       [pollImage]="poll.image"
     ></app-pool>
   </div>
-  <div class="container poll-detail">Detail</div>
+  <div class="container poll-detail">
+      <app-poll-vote></app-poll-vote>
+  </div>
 </div>
 <router-outlet></router-outlet>
