--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,12 +15,19 @@
       *ngFor="let poll of polls"
       [question]="poll.question"
       [voted]="poll.voted"
-      [votes]="poll.votes"
-      [pollImage]="poll.image"
+      [votes]="poll.results"
+      [pollImage]="poll.thumbnail"
+      (click)="setActivatePoll(poll)"
     ></app-pool>
   </div>
   <div class="container poll-detail">
-      <app-poll-vote></app-poll-vote>
+    <app-poll-vote
+      *ngIf="activePoll"
+      [voted]="activePoll.voted"
+      [question]="activePoll.question"
+      [options]="activePoll.options"
+      [results]="activePoll.results"
+    ></app-poll-vote>
   </div>
 </div>
 <router-outlet></router-outlet>
