--- a/src/app/pool-create/pool-create.component.html
+++ b/src/app/pool-create/pool-create.component.html
@@ -30,7 +30,7 @@
     </label>
     <div class="col-sm-8">
       <input
-      formControlName="option1"
+      formControlName="op1"
         type="text"
         class="form-control form-control-sm"
         placeholder="option 1"
@@ -42,7 +42,7 @@
         
     </label>
     <div class="col-sm-8">
-<input formControlName="option2" type="text" class="form-control form-control-sm" placeholder="option 2"/>
+<input formControlName="op2" type="text" class="form-control form-control-sm" placeholder="option 2"/>
 </div>
 </div>
 <div class="form-group row">
@@ -51,7 +51,7 @@
     </label>
     <div class="col-sm-8">
 <input 
-formControlName="option3" type="text" class="form-control form-control-sm" placeholder="option 3"/>
+formControlName="op3" type="text" class="form-control form-control-sm" placeholder="option 3"/>
 </div>
 </div>
 <div class="d-flex justify-content-center">
